💄 style(homepage): Fixing link overflow

--- a/src/Pages/Homepage/style.module.css
+++ b/src/Pages/Homepage/style.module.css
@@ -11,6 +11,11 @@
   color: var(--gray-400);
 }
 
+#homepage a{
+  width: fit-content;
+  display: inline-block;
+}
+
 .btn {
   border: none;
   background: var(
